# asmap-dashboard

./: .gitignore  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: pages.yml  refresh-metrics.yml  tests.yml
asmap_dashboard/: __main__.py  _prefix.py  analyze.py  asn_names.py  cli.py  diff.py  loader.py  metrics.py  netgroup.py
asmap_dashboard/_vendor/: asmap.py
asmap_dashboard/network/: __init__.py  metrics.py  snapshots.py
docs/: architecture.md
scripts/: vendor-lit.mjs
tests/: conftest.py  test_analyze.py  test_asn_names.py  test_cli.py  test_diff.py  test_loader.py  test_metrics.py  test_netgroup.py  test_network_metrics.py  test_network_snapshots.py  test_prefix.py  test_schema_contract.py
web/: index.html
web/assets/css/: base.css  charts.css  diff-explorer.css  drift-chart.css  dropdown.css  info-tooltip.css  layout.css  maps.css  mode-switch.css  network.css  overview.css  skeleton.css  theme-switch.css  tokens.css  top-movers.css
web/assets/data/: asn-names.json  metrics.json  network.json
web/assets/i18n/: README.md  en.json
web/assets/js/: app.js  asn-names.js  diff-tab.js  format.js  maps-tab.js  network-tab.js  tabs.js
web/assets/js/charts/: bar-geometry.js  chart-base.js  chart-card.js  chart-interaction.js  chart-tooltip.js  line-chart.js  stacked-bar-chart.js  svg.js
web/assets/js/components/: build-selector.js  chart-lede.js  chart-legend.js  diff-explorer.js  diversity-chart.js  drift-chart-points.js  drift-chart-tooltips.js  drift-chart.js  dropdown.js  entries-chart.js  info-tooltip.js  map-delta-chart.js  map-size-chart.js  metric-card.js  mode-switch.js  nav-menu.js  overview-cards.js  paragraphs.js  theme-switch.js  top-movers-table.js
web/assets/js/components/diff-explorer/: breakdown.js  family.js  index.js  node-impact.js  permalink.js  results.js  selectors.js  skeleton.js
web/assets/js/components/network/: cross-check.js  operators-chart.js  overview.js  series-chart.js  series-data.js  timelines.js  trend-charts.js
web/assets/js/components/top-movers/: columns.js  controls.js  filter.js  index.js  pagination.js  rows.js  sort.js  state.js  units.js
web/assets/js/utils/: animate.js  diffs.js  dismiss.js  dom.js  hash-state.js  history-range.js  i18n.js  lit-host.js  map-variants.js  maps-view.js  storage.js  symbols.js  variants.js
web/tests/: README.md  bar-geometry.test.js  diffs.test.js  history-range.test.js  lit-host.test.js  map-variants.test.js  sort.test.js  vendor-lit.test.js
